--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
                 <span id="result">
                 </span>
             </div>
-            <footer>&#169;Everyone Can Get Rich<footer/>
+            <footer>&#169;Everyone Can Get Rich<br>
+                This Calculator belongs to Garv Kumar
+                <footer/>
             
         </div>
     </body>
